Update index .html

--- a/index (1).html
+++ b/index (1).html
@@ -127,22 +127,22 @@
         <h1><a href="https://t.me/bhatmubiii">PROFESSOR</a></h1>
 
         <div class="inline-details">
-            <div class="place">𝗣𝗟𝗔𝗖𝗘 : sᴏᴘᴏʀᴇ ᴋᴀsʜᴍɪʀ</div>
+            <div class="place">𝗣𝗟𝗔𝗖𝗘 : 𝗦𝗼𝗽𝗼𝗿𝗲 𝗞𝗮𝘀𝗵𝗺𝗶𝗿</div>
             <div>𝗔𝗚𝗘 → 18</div>
-            <div class="best-friend"><a href="https://t.me/@VNxOwner">𝗕𝗘𝗦𝗧 𝗙𝗥𝗜𝗘𝗡𝗗 → ᴠᴇɴᴏᴍ🗿</a></div>
+            <div class="best-friend"><a href="https://t.me/@OpclaimerakaLinX">𝗕𝗘𝗦𝗧 𝗙𝗥𝗜𝗘𝗡𝗗 → 𝗢𝗽𝗰𝗹𝗮𝗶𝗺𝗲𝗿𝗮𝗸𝗮𝗟𝗶𝗻𝗫🗿</a></div>
         </div>
 
         <div class="section">
             <h2>𝗦𝗞𝗜𝗜𝗜𝗦 𝗔𝗡𝗗 𝗘𝗫𝗣𝗘𝗥𝗧</h2>
             <ul>
-                <li>ᴇᴛʜIᴄᴀl ʜᴀᴄᴋIɴɢ </li>
-                <li>ᴡᴇʙ ᴍᴀᴋIɴɢ </li>
-                <li>ᴛᴇʀᴍᴜx ᴇxᴘᴇʀᴛ</li>
-                <li>ɪɴᴛᴇʀɴᴇᴛ ꜰɪʟᴇs ᴍᴀᴋɪɴɢ </li>
-                <li>ᴘʜIsʜIɴɢ ᴡᴇʙ ᴍᴀᴋIɴɢ </li>
-                <li>ᴡᴇʙ Iɴғᴏ sᴄʀᴀᴘIɴɢ </li>
-                <li>ɴᴇᴛᴡᴏʀᴋ sᴇᴄᴜʀIᴛʏ</li>
-                <li>ᴇᴛᴄ</li>
+                <li>𝙀𝙩𝙝𝙞𝙘𝙖𝙡 𝙃𝙖𝙘𝙠𝙞𝙣𝙜 </li>
+                <li>𝙒𝙚𝙗 𝙈𝙖𝙠𝙞𝙣𝙜 </li>
+                <li>𝙏𝙚𝙧𝙢𝙪𝙭 𝙀𝙭𝙥𝙚𝙧𝙩</li>
+                <li>𝙄𝙣𝙩𝙚𝙧𝙣𝙚𝙩 𝙁𝙞𝙡𝙚𝙨 𝙈𝙖𝙠𝙞𝙣𝙜 </li>
+                <li>𝘼𝙥𝙥 𝙈𝙖𝙠𝙞𝙣𝙜 </li>
+                <li>𝙒𝙚𝙗 𝙄𝙣𝙛𝙤 𝙎𝙘𝙧𝙖𝙥𝙥𝙞𝙣𝙜 </li>
+                <li>𝙉𝙚𝙩𝙬𝙤𝙧𝙠𝙞𝙣𝙜 𝙎𝙚𝙘𝙪𝙧𝙞𝙩𝙮</li>
+                <li>𝙀𝙩𝙘</li>
             </ul>
         </div>
 
